--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "node-sass": "^6.0.1",
-    "sass-loader": "^10",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@nuxtjs/fontawesome": "^1.1.2"
+    "@nuxtjs/fontawesome": "^1.1.2",
+    "core-js": "^3.15.1",
+    "emailjs-com": "^3.2.0",
+    "node-sass": "^6.0.1",
+    "nuxt": "^2.15.7",
+    "sass-loader": "^10"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
